Tweaked Makefile for websockets

--- a/src/core/Makefile
+++ b/src/core/Makefile
@@ -1,8 +1,8 @@
 CC=gcc
 LD=gcc
-CFLAGS=-lconfig
+CFLAGS=-lconfig -lwebsockets -lpthread
 
-main: config.o
+main: config.o  ws.o
 	$(CC) $(CFLAGS) -o ../../SleeperCel main.c config.o
 clean:
 	rm -f ../../SleeperCel *.o
